2012-08-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-summary-resend-message): Honor posting-style for
	`name' and `address' in Resent-From header.

2012-08-14  Chong Yidong  <cyd@gnu.org>

	* gnus-art.el (article-display-face): Handle failure in
	gnus-create-image (Bug#11802).

2012-08-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-agent.el (gnus-agent-cat-defaccessor, gnus-agent-cat-groups):
	Use defsetf.

2012-08-10  Daiki Ueno  <ueno@unixuser.org>

	* auth-source.el: (auth-source-plstore-search)
	(auth-source-secrets-search): Ignore :require and :type in search spec.

2012-08-06  Julien Danjou  <julien@danjou.info>

	* nnimap.el (nnimap-request-head): Resture to-buffer parameter, used by
	`nnimap-request-move-article'.

	* gnus-demon.el (gnus-demon-add-handler, gnus-demon-remove-handler):
	Remove autoload, already handled by gnus.el.

	* nnimap.el (nnimap-request-head): Remove to-buffer argument.

	* gnus-int.el (gnus-request-head): Remove to-buffer argument, only
	supported by nnimap actually. Reverts previous change.

	* gnus-int.el (gnus-request-head): Add an optional to-buffer parameter
	to mimic `gnus-request-article' and enjoy backends the nn*-request-head
	to-buffer argument that is already supported.

2012-08-05  Julien Danjou  <julien@danjou.info>

	* gnus-demon.el (gnus-demon-add-handler, gnus-demon-remove-handler):
	Add autoload.

2012-07-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-valid-select-methods): Fix custom type.

2012-07-29  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-sources, auth-source-backend-parse)
	(auth-source-macos-keychain-search)
	(auth-source-macos-keychain-search-items)
	(auth-source-macos-keychain-result-append)
	(auth-source-macos-keychain-create): Support Mac OS X Keychains in
	auth-source.el through the /usr/bin/security utility.
	(auth-sources): Fix syntax error.
	(auth-source-macos-keychain-result-append): Fix variable name.